# pg-atlas-backend

./: .env.example  .gitignore  .pre-commit-config.yaml  CHANGELOG.md  CLAUDE.md  Dockerfile  LICENSE  README.md  alembic.ini  docker-compose.yml  entrypoint.sh  pyproject.toml  pyrightconfig.json
.do/: app.yaml
.github/: copilot-instructions.md
.github/agent-handoff/: implementation-notes.md
.github/scripts/: parse-bootstrap-log.py  parse-gitlog-log.py  parse-materialize-adoption-log.py  parse-materialize-criticality-log.py  parse-materialize-pony-log.py  parse-sbom-log.py  render-template.py  worker_log_utils.py
.github/templates/: bootstrap-metrics-summary.md  bootstrap-summary.md  gitlog-queue-summary.md  opengrants-summary.md  package-deps-summary.md  registry-crawl-summary.md  sbom-queue-summary.md
.github/workflows/: bootstrap.yml  ci.yml  gitlog-queue.yml  release-please.yml  sbom-queue.yml  sync-depsdev-proto.yml
pg_atlas/: __main__.py  api_metadata.py  config.py  main.py  rate_limit.py
pg_atlas/auth/: oidc.py
pg_atlas/crawlers/: __main__.py  base.py  cargo.py  factory.py  npm.py  packagist.py  pubdev.py  pypi.py
pg_atlas/data/: project-git-mapping.yml
pg_atlas/db/: base.py  session.py
pg_atlas/db_models/: __init__.py  base.py  contributed_to.py  gitlog_artifact.py  project.py  release.py  repo_vertex.py  sbom_submission.py  session.py  vertex_ops.py
pg_atlas/deps_dev/: generate_async_client.py  sync_proto.py
pg_atlas/gitlog/: __main__.py  filters.py  parser.py  persist.py  runtime.py
pg_atlas/ingestion/: persist.py  queue.py  spdx.py
pg_atlas/instruments/: tee.py
pg_atlas/metrics/: __init__.py  active_subgraph.py  adoption.py  config.py  criticality.py  graph_builder.py  materialize.py  materialize_adoption.py  materialize_criticality.py  materialize_pony.py  pony_factor.py
pg_atlas/migrations/: README.md  env.py
pg_atlas/procrastinate/: app.py  depsdev.py  github.py  opengrants.py  project-git-mapping.yml  seed.py  seed_gitlog.py  seed_opengrants.py  seed_reprocess_sboms.py  tasks.py  upserts.py  worker.py
pg_atlas/routers/: api-versioning.md  common.py  contributors.py  gitlog.py  health.py  ingestion.py  metadata.py  models.py  projects.py  repos.py  tags.py
pg_atlas/storage/: artifacts.py
tests/: conftest.py  db_cleanup.py  test_artifacts.py  test_db_models.py  test_health.py  test_metrics_active_subgraph.py  test_metrics_criticality.py  test_metrics_graph_builder.py  test_persist.py  test_rate_limit.py  test_sbom_ingest.py  test_sbom_list.py  test_sbom_queue.py  test_sbom_semantic_hash.py
tests/bootstrap/: test_app_worker_seed.py  test_depsdev.py  test_github.py  test_live_apis.py  test_opengrants.py  test_seed_reprocess_sboms.py  test_tasks.py  test_upserts.py
tests/crawlers/: conftest.py  test_base.py  test_cargo.py  test_db_integration.py  test_factory.py  test_live_apis.py  test_npm.py  test_packagist.py  test_pubdev.py  test_pypi.py
tests/data_fixtures/: depsdev_package_stellar_sdk.json  depsdev_requirements_stellar_sdk.json  github_dep_graph.spdx.json  invalid.spdx.json  opengrants_applications_round39.json  py-stellar-sdk-a9b110.spdx.json
tests/github_scripts/: test_parse_worker_logs.py  test_render_template.py
tests/gitlog/: conftest.py  test_filters.py  test_gitlog_db_integration.py  test_gitlog_persist.py  test_live_repos.py  test_parser.py
tests/instruments/: test_tee.py
tests/metrics/: conftest.py  test_cross_metrics.py  test_materialize_adoption.py  test_materialize_criticality.py  test_materialize_pony.py  test_metrics_active_subgraph.py  test_metrics_adoption.py  test_metrics_criticality.py  test_metrics_graph_builder.py  test_metrics_pony_factor.py
tests/persistence/: test_db_models.py  test_persist.py  test_releases.py
tests/routers/: conftest.py  test_contributors.py  test_gitlog.py  test_health.py  test_metadata.py  test_openapi.py  test_projects.py  test_rate_limit.py  test_repos.py
tests/sbom/: seed_sbom.py  test_sbom_defer.py  test_sbom_ingest.py  test_sbom_list.py  test_sbom_perf.py  test_sbom_queue.py  test_sbom_semantic_hash.py  test_spdx_parse.py
tests/test_bootstrap/: conftest.py  test_app_worker_seed.py  test_depsdev.py  test_opengrants.py  test_tasks.py
tests/test_crawlers/: test_base.py  test_db_integration.py  test_live_apis.py  test_packagist.py  test_pubdev.py
tests/test_github_scripts/: test_parse_worker_logs.py
tests/test_gitlog/: conftest.py  test_gitlog_db_integration.py  test_gitlog_persist.py  test_live_repos.py  test_parser.py
tests/test_routers/: test_contributors.py  (+4 more)
(+39 files in other folders)
