[project]
name = "pg-atlas-backend"
version = "0.1.0"
description = "PG Atlas backend: ingestion pipeline, storage, metric computation, and REST API."
authors = [{ name = "Alex Olieman", email = "alex@olieman.net" }]
license = { text = "MPL-2.0" }
readme = "README.md"
requires-python = ">=3.12"
dependencies = [
    "fastapi>=0.115.0",
    "uvicorn[standard]>=0.34.0",
    "pydantic-settings>=2.7.0",
    "sqlalchemy[asyncio]>=2.0.0",
    "asyncpg>=0.30.0",
    "alembic>=1.14.0",
    "spdx-tools>=0.8.3",
    "PyJWT[crypto]>=2.10.0",
    "cryptography>=44.0.0",
    "httpx>=0.28.0",
    "cachetools>=5.5.0",
]

[dependency-groups]
dev = [
    "pytest>=8.3.0",
    "pytest-asyncio>=0.25.0",
    "pytest-mock>=3.14.0",
    "ruff>=0.9.0",
    "mypy>=1.14.0",
]

[project.scripts]
pg-atlas = "pg_atlas.__main__:main"

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[tool.hatch.build.targets.wheel]
packages = ["pg_atlas"]

[tool.pytest.ini_options]
asyncio_mode = "auto"
testpaths = ["tests"]

[tool.ruff]
line-length = 127

[tool.ruff.lint]
select = ["E", "F", "I"]

[tool.mypy]
python_version = "3.12"
disallow_untyped_defs = true
ignore_missing_imports = true
warn_return_any = true
warn_unused_ignores = true
