[project]
name = "pg-atlas-backend"
version = "0.1.1"
description = "PG Atlas backend: ingestion pipeline, storage, metric computation, and REST API."
authors = [{ name = "Alex Olieman", email = "alex@olieman.net" }]
license = { text = "MPL-2.0" }
readme = "README.md"
requires-python = ">=3.14"
dependencies = [
    "fastapi>=0.133.1",
    "uvicorn[standard]>=0.41.0",
    "pydantic-settings>=2.13.1",
    "sqlalchemy[asyncio]>=2.0.47",
    "asyncpg>=0.31.0",
    "alembic>=1.18.4",
    "spdx-tools>=0.8.3",
    "pyjwt[crypto]>=2.11.0",
    "cryptography>=46.0.5",
    "httpx>=0.28.1",
    "cachetools>=7.0.1",
]

[dependency-groups]
dev = [
    "pytest",
    "pytest-asyncio",
    "pytest-mock",
    "ruff",
    "mypy",
    "types-cachetools",
]

[project.scripts]
pg-atlas = "pg_atlas.__main__:main"

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[tool.hatch.build.targets.wheel]
packages = ["pg_atlas"]

[tool.pytest.ini_options]
asyncio_mode = "auto"
testpaths = ["tests"]

[tool.black]
line-length = 127

[tool.ruff]
line-length = 127

[tool.ruff.lint]
select = ["E", "F", "I"]

[tool.mypy]
python_version = "3.14"
explicit_package_bases = true
disallow_untyped_defs = true
ignore_missing_imports = true
warn_return_any = true
warn_unused_ignores = true
