[project]
name = "pg-atlas-backend"
version = "0.2.0"
description = "PG Atlas backend: ingestion pipeline, storage, metric computation, and REST API."
authors = [{ name = "Alex Olieman", email = "alex@olieman.net" }]
license = { text = "MPL-2.0" }
readme = "README.md"
requires-python = ">=3.14"
dependencies = [
    "fastapi>=0.133.1",
    "uvicorn[standard]>=0.41.0",
    "pydantic-settings>=2.13.1",
    "sqlalchemy[asyncio]>=2.0.47",
    "asyncpg>=0.31.0",
    "alembic>=1.18.4",
    "spdx-tools>=0.8.3",
    "pyjwt[crypto]>=2.11.0",
    "cryptography>=46.0.5",
    "httpx>=0.28.1",
    "cachetools>=7.0.1",
    "procrastinate>=3.7.2",
    "psycopg[binary,pool]>=3.3.3",
    "pygithub>=2.8.1",
    "betterproto2[all]>=0.9.1",
]

[dependency-groups]
dev = [
    "pytest",
    "pytest-asyncio",
    "pytest-mock",
    "ruff>=0.15.2",
    "mypy",
    "types-cachetools",
    "pytest-cov>=7.0.0",
    "types-pyyaml>=6.0.12.20250915",
]
proto-build = [
    "betterproto2-compiler>=0.9.0",
    "grpcio-tools",
]

[tool.uv]
conflicts = [
    [
        { group = "dev" },
        { group = "proto-build" },
    ],
]

[project.scripts]
pg-atlas = "pg_atlas.__main__:main"

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[tool.hatch.build.targets.wheel]
packages = ["pg_atlas"]

[tool.pytest.ini_options]
asyncio_mode = "auto"
testpaths = ["tests"]

[tool.black]
line-length = 127

[tool.ruff]
line-length = 127
exclude = ["pg_atlas/deps_dev/lib"]

[tool.ruff.lint]
select = ["E", "F", "I"]
per-file-ignores = { "pg_atlas/procrastinate/versions/*.py" = ["E501"] }

[tool.mypy]
python_version = "3.14"
explicit_package_bases = true
disallow_untyped_defs = true
ignore_missing_imports = true
warn_return_any = true
warn_unused_ignores = true
exclude = "pg_atlas/deps_dev/lib/"

[[tool.mypy.overrides]]
module = ["pg_atlas.deps_dev.lib.*"]
ignore_errors = true
